--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
             <td>
-                <img src="tiger.png" alt="Image not loaded">
+                <img src="tiger.png" alt="Image not loaded" height="300" width="300">
             </td>
             <td>
                 <h1>Arun M</h1>
